0.0.6
	- Taking into account relative positioned parents
	- Exporting 'tooltip' in the browser version

0.0.7
	- Added example (in examples folder)
	- Added List tooltip
	- Allow functions on values
	- Removed test coverage report
	- Bugfix: scrollTop and scrollLeft fixed for IE

0.0.8
	- Removed from BioJS (-biojs tag in package.json)
	- Needs a "relative" positioned parent
	- Included "tnt" namespace for use in browsers

0.0.9
	- In tables tooltip if "value" is empty, treat the row as an inner header

0.0.10
	- Make 'header' optional (not rendered if not present) in plain, list and table tooltips
	- Removed the inlined "closer" png and substituted by a CSS "X"

0.0.11
	- updated dependencies
0.1.0
	- fill is passed the container DOM element and not the d3 selection
	- bugfix: position left was not working
