@@ -1,72 +1,0 @@
-div .tnt_tooltip {
-  display: block;
-  position: absolute;
-  top: 0px;
-  opacity: 0;
-  border: 2px solid;
-  background-color: #FFFFFF;
-  font-size: 12px; }
-  div .tnt_tooltip h1 {
-    font-size: 30px; }
-  div .tnt_tooltip .link {
-    color: blue; }
-    div .tnt_tooltip .link:hover {
-      cursor: pointer; }
-
-div .tnt_tooltip_active {
-  opacity: 1;
-  z-index: 1001; }
-
-.tnt_tooltip_closer:before, .tnt_tooltip_closer:after {
-  content: '';
-  position: absolute;
-  width: 16px;
-  height: 4px;
-  background-color: white;
-  border-radius: 2;
-  -webkit-border-radius: 2;
-  -moz-border-radius: 2;
-  border-radius: 2px;
-  top: 8px;
-  box-shadow: 0 0 2px 0 #ccc; }
-
-.tnt_tooltip_closer {
-  width: 20px;
-  height: 20px;
-  background-color: black;
-  position: absolute;
-  right: -10px;
-  top: -10px;
-  border-radius: 6px; }
-  .tnt_tooltip_closer:before {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-    left: 2px; }
-  .tnt_tooltip_closer:after {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    right: 2px; }
-
-.tnt_zmenu {
-  font-size: 10px;
-  border-style: solid;
-  border-collapse: collapse; }
-  .tnt_zmenu th, .tnt_zmenu td {
-    padding-top: 5px;
-    padding-right: 5px;
-    padding-left: 5px;
-    padding-bottom: 5px;
-    white-space: normal;
-    text-align: left;
-    vertical-align: top;
-    font-size: 12px; }
-  .tnt_zmenu th {
-    cursor: move; }
-  .tnt_zmenu th:active {
-    cursor: move; }
