@@ -2,7 +2,7 @@
 
 <head>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="tooltip.css"/>
+    <link rel="stylesheet" href="tnt.tooltip.css"/>
     <script src="tnt.tooltip.js"></script>
 </head>
 
