@@ -2,7 +2,7 @@
 
 <head>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="../../build/tooltip.css"/>
+    <link rel="stylesheet" href="../../build/tnt.tooltip.css"/>
     <script src="../../build/tnt.tooltip.js"></script>
 </head>
 
